# macgui

./: Cargo.toml  README.md  conditions.yaml
.github /workflows/: build.yml
.github/workflows/: main.yml
src/: cpu_info.rs  disk.rs  gpu.rs  mac.rs  main.rs  ram_info.rs  redis.rs  sn.rs  sysinfo.rs
