[package]
name = "macgui"
version = "1.4.5"
edition = "2021"


[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
simple_redis = "0.6.3"
clap = "2.33"
qrcode = "0.14.0"
image = "0.25.1"
serde_json = "1.0.116"
regex = "1.10.4"

[profile.release]
strip = true 
opt-level = 3
lto = true

[target.x86_64-pc-windows-gun]
rustflags = ["-C", "target-feature=+crt-static"]
